Fix HTML formatting and structure
edited the link tag to make things work

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
     <!--<link rel="stylesheet" href="/css/resume.css">-->
-    <link rel="stylesheet" href="/resume_career_fair/resume3.css">
+    <link rel="stylesheet" href="resume3.css">
 </head>
 <body>
      
@@ -92,3 +92,4 @@
 
 </body>
 </html>
+
