--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
             experience
         </h2>
 
+        <h3 class="sub-title">Content Writer <span class="normal">| 365Give | Toronto, ON</span></h3>
+        <ul>
+           <li>Current</li>
+        </ul>
+
         
         <h3 class="sub-title">private tutor <span class="normal">| Toronto, ON</span></h3>
         <ul>
@@ -81,6 +86,11 @@
         </ul>
     </section>
 
+    <section class="certs">
+        <h2 class="section-title">Certifications</h2>
+        <h3 class="sub-title"> Responsive Web Design <span class="normal">| Free Code Camp</span></h3>
+    </section>
+
     <section class="education">
         <h2 class="section-title">education</h2>
         <h3 class="sub-title">ontario secondary school diplome <span class="normal">| East York Collegiate Institute</span></h3>
@@ -92,4 +102,5 @@
 
 </body>
 </html>
+
 
