Update skills section with typing speed
Added typing speed to skills section.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <h3 class="sub-title">organization & reporting</h3>
         <p class="description">
-            Highly organized with expertise in managing schedules, tracking sales activities, and preparing detailed reports to monitor performance and support strategic decision-making.
+            Highly organized with expertise in managing schedules, tracking sales activities, 75 wpm typing speed, and preparing detailed reports to monitor performance and support strategic decision-making.
         </p>
     </section>
        
@@ -102,5 +102,6 @@
 
 </body>
 </html>
+
 
 
